# EarningCallTranscriptAnalysis

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/FinanceFetch_Cdahlback/: stock_data_fetcher.py
src/GPTWrapper/: text_summarizer.py
src/app/: app.py
src/app/static/: styles.css
src/app/templates/: index.html
