[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "FinanceFetch_Cdahlback"
version = "0.0.1"
authors = [
  { name="Collin Dahlback", email="cdahlback208@gmail.com" },
]
description = "Intersection of NLP and finance, where you can leverage the tone and content of company earnings calls to predict stock price movements."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Flamingo-Labs/EarningCallTranscriptAnalysis/"
Issues = "https://github.com/Flamingo-Labs/EarningCallTranscriptAnalysis/issues"